[package]
edition = "2021"
rust-version = "1.75"
name = "flatland"
version = "0.8.0"
authors = ["Nova King <technobaboo@proton.me>"]
description = "Flat panel UI client for Stardust XR like SimulaVR or xrdesktop"
license = "MIT"
repository = "https://github.com/StardustXR/flatland/"
homepage = "https://stardustxr.org"

[dependencies]
glam = { version = "0.24.1", features = ["mint"] }
manifest-dir-macros = "0.1.17"
lazy_static = "1.4.0"
tokio = { version = "1.28.0", features = ["full"] }
input-event-codes = "5.16.8"
rustc-hash = "1.1.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.37"
color-eyre = "0.6.2"
colorgrad = "0.6.2"
map-range = "0.1.2"

[dependencies.stardust-xr-fusion]
git = "https://github.com/StardustXR/core.git"
branch = "dev"

[dependencies.stardust-xr-molecules]
git = "https://github.com/StardustXR/molecules.git"
branch = "dev"

[patch."https://github.com/StardustXR/core".stardust-xr-fusion]
path = "/run/media/nova/MEDIA/xr/stardust/core/fusion"