[package]
edition = "2021"
rust-version = "1.75"
name = "flatland"
version = "0.8.0"
authors = ["Nova King <technobaboo@proton.me>"]
description = "Flat panel UI client for Stardust XR like SimulaVR or xrdesktop"
license = "MIT"
repository = "https://github.com/StardustXR/flatland/"
homepage = "https://stardustxr.org"

[features]
tracy = ["dep:tracing-tracy", "dep:tracy-client"]

[dependencies]
glam = { version = "0.28.0", features = ["mint"] }
tokio = { version = "1.38.0", features = ["full"] }
input-event-codes = "6.2.0"
rustc-hash = "1.1.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
colorgrad = "0.6.2"
map-range = "0.1.2"
derive_setters = "0.1.6"
derive-where = "1.2.7"
serde = { version = "1.0.216", features = ["derive"] }
tracing-tracy = { version = "0.11.4", optional = true }
tracy-client = { version = "0.18.0", optional = true }

[dependencies.stardust-xr-fusion]
git = "https://github.com/StardustXR/core.git"
branch = "dev"

[dependencies.stardust-xr-molecules]
git = "https://github.com/StardustXR/molecules.git"
branch = "dev"

[dependencies.stardust-xr-asteroids]
git = "https://github.com/StardustXR/asteroids.git"
branch = "dev"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
# path = "../asteroids"
